<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/routeNameStartingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/routeNameView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/route_name" />

            <EditText
                android:id="@+id/routeNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:drawableEnd="@drawable/icons8_checkmark_border_24"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startingPView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/starting_point" />

            <EditText
                android:id="@+id/startingPEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateDurationLayout"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/routeNameStartingLayout"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="left"
                android:text="@string/date" />

            <TextView
                android:id="@+id/dateDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:onClick="openSetDate"
                android:textColor="#2196F3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/durationView"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/duration" />

            <LinearLayout
                android:id="@+id/timeHoriLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/minutesEditText"
                    android:layout_width="68dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="#2196F3"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/colonView"
                    android:layout_width="14dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/secondsEditText"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="#2196F3"
                    android:textColorLink="#002196F3"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/stepsDisplayLayout"
        android:layout_width="330dp"
        android:layout_height="96dp"
        android:layout_below="@id/dateDurationLayout"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/stepsLayout"
            android:layout_width="160dp"
            android:layout_height="65dp"
            android:layout_gravity="left"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stepsView"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:fontFamily="@font/actor"
                android:gravity="center"
                android:text="@string/steps"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stepsNumView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/distLayout"
            android:layout_width="160dp"
            android:layout_height="65dp"
            android:layout_below="@id/dateDurationLayout"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distanceView"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:fontFamily="@font/actor"
                android:gravity="center"
                android:text="@string/distance"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distanceNumView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayoutAdditionalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stepsDisplayLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp">

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/hillyToggle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="#2196F3" />

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/loopToggle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="#2196F3" />

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/surfaceToggle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_below="@+id/hillyToggle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="#2196F3" />

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/streetToggle"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_below="@+id/loopToggle"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="#2196F3" />

        <org.honorato.multistatetogglebutton.MultiStateToggleButton
            android:id="@+id/difficultyToggle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_below="@+id/surfaceToggle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#2196F3" />

    </RelativeLayout>

    <Button
        android:id="@+id/proposeWalkButton"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutAdditionalInfo"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="117dp"
        android:layout_weight="1"
        android:background="#2196F3"
        android:foregroundGravity="clip_horizontal"
        android:text="@string/propose_walk"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"

        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_below="@+id/linearLayoutAdditionalInfo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/notesButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/routes_list_start_button_states"
            android:drawableStart="@drawable/icons8_edit_30"
            android:text="@string/note"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/save" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>