<resources>
    <string name="app_name">WalkWalkRevolution</string>

    <string name="stop_btn">Stop</string>>
    <string name="timer">0:00</string>
    <string name="input_height_msg">Input your height below</string>
    <string name="height_save_btn">Save</string>>
    <string name="default_feet">5</string>>
    <string name="default_inches">7</string>

    <!--Route Form/List-->
    <string name="route_details">Route Details</string>
    <string name="route_name">Route Name</string>
...
