<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoutesList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRoutes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/addRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/routes_list_start_button_states"
        android:text="+"
        android:textSize="20sp" />

    <Button
        android:id="@+id/goToHomePage"
        android:background="@drawable/routes_list_start_button_states"
        android:drawableLeft="@drawable/icons8_home_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:text="Home" />

</RelativeLayout>